--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
     <title>Document</title>
     <!-- local stile -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
 <body>
     <div id="carousel">
+        <i class="bi bi-arrow-bar-right"id="right-slider"></i>
+        <i class="bi bi-arrow-bar-left"id="left-slider"></i>
         <figure id="img-container">
-            
+            <img src="img/01.jpg" alt="01">
+            <img src="img/02.jpg" alt="02">
+            <img src="img/03.jpg" alt="03">
+            <img src="img/04.jpg" alt="04">
+            <img src="img/05.jpg" alt="05">
+            <img src="img/06.jpg" alt="06">
+            <img src="img/07.jpg" alt="07">
+            <img src="img/08.jpg" alt="08">
+            <img src="img/09.jpg" alt="09">
+            <img src="img/10.jpg" alt="10">
         </figure>
     </div>
     <!-- //Local script -->
