--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="carousel">
         <i class="bi bi-arrow-bar-right"id="right-slider"></i>
         <i class="bi bi-arrow-bar-left"id="left-slider"></i>
-        <figure id="img-container">
-            <img src="img/01.jpg" alt="01">
+        <div id="img-container">
+            <!-- <img src="img/01.jpg" alt="01">
             <img src="img/02.jpg" alt="02">
             <img src="img/03.jpg" alt="03">
             <img src="img/04.jpg" alt="04">
@@ -24,8 +24,8 @@
             <img src="img/07.jpg" alt="07">
             <img src="img/08.jpg" alt="08">
             <img src="img/09.jpg" alt="09">
-            <img src="img/10.jpg" alt="10">
-        </figure>
+            <img src="img/10.jpg" alt="10"> -->
+        </div>
     </div>
     <!-- //Local script -->
     <script src="js/script.js"></script>
